buildscript {
    repositories {

        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
        mavenCentral()
    }
    dependencies {
        classpath 'org.spongepowered:mixingradle:0.7.38'
    }
}

plugins {
    id 'eclipse'
    id 'idea'
    id 'net.minecraftforge.gradle' version '[6.0.16,6.2)'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

apply plugin: 'org.spongepowered.mixin'

group = mod_group_id
version = mod_version

base {
    archivesName = mod_id
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(17)
}

configurations {
    shadow
}

minecraft {

    mappings channel: mapping_channel, version: mapping_version

    copyIdeResources = true

    runs {

        configureEach {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'

            property 'forge.logging.console.level', 'debug'

            lazyToken('minecraft_classpath') {
                configurations.shadow.copyRecursive().resolve()
                        .collect { it.absolutePath }.join(File.pathSeparator)
            }

            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }

        client {

            property 'forge.enabledGameTestNamespaces', mod_id
            jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
                    '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
                    '--add-opens', 'java.base/java.util=ALL-UNNAMED'
        }

        server {
            property 'forge.enabledGameTestNamespaces', mod_id
            args '--nogui'
        }

        gameTestServer {
            property 'forge.enabledGameTestNamespaces', mod_id
        }

        data {

            workingDirectory project.file('run-data')

            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
        }
    }
}

mixin {
    add sourceSets.main, "${mod_id}.refmap.json"

    config "${mod_id}.mixins.json"
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    flatDir {
        dir 'libs'
    }
    maven {
        url "https://cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
    maven {
        name "FDD Maven"
        url "https://maven.firstdark.dev/releases"
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
    annotationProcessor 'org.spongepowered:mixin:0.8.7:processor'
    compileOnly "dev.firstdark.discordrpc:discord-rpc:1.0.4"
    shadow "dev.firstdark.discordrpc:discord-rpc:1.0.4"

    implementation("org.jspecify:jspecify:1.0.0")

    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:0.5.4"))
    implementation(jarJar("io.github.llamalad7:mixinextras-forge:0.5.4")) {
        jarJar.ranged(it, "[0.5.4,)")
    }

    implementation("org.apache.commons:commons-compress:1.28.0")
    implementation 'commons-io:commons-io:2.15.1'
    implementation 'org.apache.logging.log4j:log4j-core:2.25.4'
    implementation 'org.apache.commons:commons-lang3:3.18.0'
    implementation 'org.codehaus.plexus:plexus-utils:4.0.3'
    implementation 'io.netty:netty-common:4.1.118.Final'
    implementation("io.netty:netty-handler:4.2.12.Final")
    implementation 'io.netty:netty-codec:4.1.125.Final'
    implementation 'com.google.guava:guava:33.0.0-jre'

    // TODO: switch to flatDir repository sum time
    compileOnly fg.deobf(files("libs/goetydelight-1.2.0f2+20260225.jar"))
    compileOnly fg.deobf(files("libs/create-1.20.1-6.0.8.jar"))
    compileOnly fg.deobf(files("libs/irons_spellbooks-1.20.1-3.15.4.jar"))
    compileOnly fg.deobf(files("libs/species-3.5.jar"))
    compileOnly fg.deobf(files("libs/covenant_of_the_seven-2.2.6-hotfix.jar"))

    implementation fg.deobf("curse.maven:difficulty-enhancement-1456194:7953458")
    compileOnly fg.deobf("curse.maven:mowzies-mobs-250498:7815705")
    compileOnly fg.deobf("curse.maven:enigmatic-legacy-336184:5600004")
    compileOnly fg.deobf("curse.maven:to-tweaks-irons-spells-1046916:7424522")
    compileOnly fg.deobf("curse.maven:brutality-a-terramity-addon-1298802:7224161") // requires photon
    compileOnly fg.deobf("curse.maven:ribbits-622967:7354928")
    compileOnly fg.deobf("curse.maven:artifacts-312353:7903806")
    compileOnly fg.deobf("curse.maven:modernfix-790626:7911677")
    compileOnly fg.deobf("curse.maven:armageddon-1110642:7142556")
    implementation fg.deobf("curse.maven:l2h-909207:7746182")
    implementation fg.deobf("curse.maven:l2l-620203:6806000")
    compileOnly fg.deobf("curse.maven:composite-material-982540:6310307")
    compileOnly fg.deobf("curse.maven:ftb-quests-forge-289412:7909594")
    compileOnly fg.deobf("curse.maven:ftb-library-forge-404465:7296748")
    compileOnly fg.deobf("curse.maven:ftb-teams-forge-404468:7499810")
    compileOnly fg.deobf("curse.maven:architectury-api-419699:5137938")
    implementation fg.deobf("curse.maven:curios-309927:6418456")
    implementation fg.deobf("curse.maven:geckolib-388172:7553267")
    compileOnly fg.deobf("curse.maven:embeddium-908741:5681725")
    compileOnly fg.deobf("curse.maven:celestisynth-872712:7686018")
    implementation fg.deobf("curse.maven:class-enhancement-1460324:7801433")
    compileOnly fg.deobf("curse.maven:capybaras-mod-1345431:7354242")
    compileOnly fg.deobf("curse.maven:born-in-chaos-686437:7366478")
    compileOnly fg.deobf("curse.maven:mekalus-oculus-fork-with-fixed-mekanism-mekasuit-1130957:6994299")
    compileOnly fg.deobf("curse.maven:lendercataclysm-551586:7867528")
    compileOnly fg.deobf("curse.maven:legendary-monsters-944035:7628159")
    compileOnly fg.deobf("curse.maven:lionfish-api-1001614:5922047")
    implementation fg.deobf("curse.maven:goety-revelation-1236817:7638178")
    implementation fg.deobf("dev.xkmc.l2serial:l2serial:1.2.2")
    implementation fg.deobf("curse.maven:terramity-1084134:6054971")
    compileOnly fg.deobf("curse.maven:better-combat-by-daedelus-639842:7287334")
    implementation fg.deobf("curse.maven:alexs-mobs-426558:5698791")
    implementation fg.deobf("curse.maven:goety-586095:7799190")
    implementation fg.deobf("curse.maven:alexs-caves-924854:5848216")
    implementation fg.deobf("curse.maven:player-animator-658587:4587214")
    compileOnly fg.deobf("curse.maven:natures-aura-306626:4963590")
    compileOnly fg.deobf("curse.maven:cloth-config-348521:5729105")
    compileOnly fg.deobf("curse.maven:apothic-attributes-898963:5634071")
    compileOnly fg.deobf("curse.maven:bloodmagic-224791:7956981")
    implementation fg.deobf("curse.maven:patchouli-306770:7731017")
    compileOnly fg.deobf("curse.maven:farmers-delight-398521:8007609")
    implementation fg.deobf("curse.maven:l2-complements-758349:7606338")
    compileOnly fg.deobf("curse.maven:attributes-fix-280510:7612291")
    implementation fg.deobf("curse.maven:caelus-308989:5281700")
    implementation fg.deobf("curse.maven:citadel-331936:7476570")
    compileOnly fg.deobf("curse.maven:placebo-283644:6274231")
    implementation fg.deobf("curse.maven:ending-library-1471165:8026953")
    runtimeOnly fg.deobf("curse.maven:dreamwoods-1219645:7685925")
    runtimeOnly fg.deobf("curse.maven:deeper-darker-659011:5906086")
    compileOnly fg.deobf("curse.maven:photon-871522:7501597") //impossible to run in IDEA due to architectury
}

shadowJar {
    archiveClassifier.set('all')
    configurations = [project.configurations.shadow]
    mergeServiceFiles()
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.matching { it.name == 'reobfJarJar' }.configureEach {
    dependsOn tasks.named('shadowJar')
}

tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [minecraft_version   : minecraft_version, minecraft_version_range: minecraft_version_range,
                             forge_version       : forge_version, forge_version_range: forge_version_range,
                             loader_version_range: loader_version_range,
                             mod_id              : mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: mod_version,
                             mod_authors         : mod_authors, mod_description: mod_description,]

    inputs.properties replaceProperties

    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }
}

tasks.named('jar', Jar).configure {
    dependsOn tasks.named('shadowJar')
    dependsOn tasks.named('jarJar')
    from({ zipTree(tasks.named('shadowJar').get().archiveFile.get().asFile) }) {
        exclude 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA'
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    manifest {
        attributes([
                "Specification-Title"     : mod_id,
                "Specification-Vendor"    : mod_authors,
                "Specification-Version"   : "1",

                "Implementation-Title"    : project.name,
                "Implementation-Version"  : project.jar.archiveVersion,
                "Implementation-Vendor"   : mod_authors,
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                "MixinConfigs"            : "${mod_id}.mixins.json"
        ])
    }

    finalizedBy 'reobfJar'
}

